--- a/maptest.ipynb
+++ b/maptest.ipynb
@@ -2,41 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import plotly.express as px\n",
     "import pandas as pd\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mapping={\n",
-    "    '강원영동':['강원도'],\n",
-    "    '경남':['경상남도', '울산광역시', '부산광역시'],\n",
-    "    '경북':['경상북도', '대구광역시'],\n",
-    "    '서울경기':['서울특별시', '경기도', '인천특별시'],\n",
-    "    '전남': ['전라남도','광주광역시'],\n",
-    "    '전북': ['전라북도'],\n",
-    "    '제주': ['제주특별자치도'],\n",
-    "    '충남': ['충청남도', '세종특별자치시', '대전광역시'],\n",
-    "    '충북':['충청북도']\n",
-    "}\n",
-    "\n",
-    "def to_map_df(df,idcol='location',datacol='data'):\n",
-    "    res = pd.DataFrame(columns = [idcol,datacol])\n",
-    "    for i in range(len(df)):\n",
-    "        key,value = df[[idcol,datacol]].iloc[i] \n",
-    "        if key in mapping:\n",
-    "            for item in mapping[key]:\n",
-    "                res.loc[len(res)] = [item,value]\n",
-    "    return res"
+    "import json\n",
+    "from utilities import to_map_df"
    ]
   },
   {
@@ -109,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -27550,23 +27523,23 @@
          "subplot": "mapbox",
          "type": "choroplethmapbox",
          "z": [
-          0.5413392526457621,
-          0.6246070870087481,
-          0.6246070870087481,
-          0.6246070870087481,
-          0.012691374455207849,
-          0.012691374455207849,
-          0.22974899723107112,
-          0.22974899723107112,
-          0.22974899723107112,
-          0.40945630931583,
-          0.40945630931583,
-          0.8193972397263618,
-          0.7473934930375565,
-          0.19833802414894808,
-          0.19833802414894808,
-          0.19833802414894808,
-          0.3865548835490118
+          0.2594262716042913,
+          0.6851229770397239,
+          0.6851229770397239,
+          0.6851229770397239,
+          0.5820042492683467,
+          0.5820042492683467,
+          0.8758640004427832,
+          0.8758640004427832,
+          0.8758640004427832,
+          0.053723211539362103,
+          0.053723211539362103,
+          0.916034208738947,
+          0.29484897001139854,
+          0.2811458366653836,
+          0.2811458366653836,
+          0.2811458366653836,
+          0.21956763603537366
          ]
         }
        ],
@@ -28459,7 +28432,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# 지도 그리기\n",
     "fig=px.choropleth_mapbox(mdf,\n",
     "    geojson=data,\n",
     "    locations='location',\n",
